k8s/services.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: testinglab-service
# spec:
#   type: ClusterIP
#   selector:
#     app: testinglab
#   ports:
#     - name: frontend
#       port: 5173
#       targetPort: 5173
#     - name: backend
#       port: 8888
#       targetPort: 8888
#     - name: mongodb
#       port: 27017
#       targetPort: 27017
# ---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: testinglab
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: testinglab
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: testinglab
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
#
