k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testinglab-service
spec:
  type: ClusterIP
  selector:
    app: testinglab
  ports:
    - name: frontend
      port: 5173
      targetPort: 5173
    - name: backend
      port: 8888
      targetPort: 8888
    - name: mongodb
      port: 27017
      targetPort: 27017
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: testinglab-service
              port:
                number: 5173
